@@ -6,34 +6,59 @@ package com.softwaremagico.kt.core.controller;
  * %%
  * Copyright (C) 2021 - 2023 Softwaremagico
  * %%
- * This software is designed by Jorge Hortelano Otero. Jorge Hortelano Otero
- * <softwaremagico@gmail.com> Valencia (Spain).
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
  *
- * This program is free software; you can redistribute it and/or modify it under
- * the terms of the GNU General Public License as published by the Free Software
- * Foundation; either version 2 of the License, or (at your option) any later
- * version.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
  *
- * This program is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
- * details.
- *
- * You should have received a copy of the GNU General Public License along with
- * this program; If not, see <http://www.gnu.org/licenses/gpl-3.0.html>.
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  * #L%
  */
 
-import com.softwaremagico.kt.core.controller.models.*;
-import com.softwaremagico.kt.core.converters.*;
-import com.softwaremagico.kt.core.converters.models.*;
+import com.softwaremagico.kt.core.controller.models.ClubDTO;
+import com.softwaremagico.kt.core.controller.models.DuelDTO;
+import com.softwaremagico.kt.core.controller.models.FightDTO;
+import com.softwaremagico.kt.core.controller.models.GroupDTO;
+import com.softwaremagico.kt.core.controller.models.ParticipantDTO;
+import com.softwaremagico.kt.core.controller.models.ScoreOfCompetitorDTO;
+import com.softwaremagico.kt.core.controller.models.ScoreOfTeamDTO;
+import com.softwaremagico.kt.core.controller.models.TeamDTO;
+import com.softwaremagico.kt.core.controller.models.TournamentDTO;
+import com.softwaremagico.kt.core.converters.ClubConverter;
+import com.softwaremagico.kt.core.converters.DuelConverter;
+import com.softwaremagico.kt.core.converters.FightConverter;
+import com.softwaremagico.kt.core.converters.GroupConverter;
+import com.softwaremagico.kt.core.converters.ParticipantConverter;
+import com.softwaremagico.kt.core.converters.ParticipantReducedConverter;
+import com.softwaremagico.kt.core.converters.ScoreOfCompetitorConverter;
+import com.softwaremagico.kt.core.converters.ScoreOfTeamConverter;
+import com.softwaremagico.kt.core.converters.TeamConverter;
+import com.softwaremagico.kt.core.converters.TournamentConverter;
+import com.softwaremagico.kt.core.converters.models.ClubConverterRequest;
+import com.softwaremagico.kt.core.converters.models.GroupConverterRequest;
+import com.softwaremagico.kt.core.converters.models.ParticipantConverterRequest;
+import com.softwaremagico.kt.core.converters.models.ScoreOfCompetitorConverterRequest;
+import com.softwaremagico.kt.core.converters.models.ScoreOfTeamConverterRequest;
+import com.softwaremagico.kt.core.converters.models.TeamConverterRequest;
+import com.softwaremagico.kt.core.exceptions.ClubNotFoundException;
 import com.softwaremagico.kt.core.exceptions.GroupNotFoundException;
-import com.softwaremagico.kt.core.exceptions.TournamentNotFoundException;
-import com.softwaremagico.kt.core.providers.*;
-import com.softwaremagico.kt.core.score.*;
+import com.softwaremagico.kt.core.providers.ClubProvider;
+import com.softwaremagico.kt.core.providers.GroupProvider;
+import com.softwaremagico.kt.core.providers.ParticipantProvider;
+import com.softwaremagico.kt.core.providers.RankingProvider;
+import com.softwaremagico.kt.core.providers.RoleProvider;
+import com.softwaremagico.kt.core.score.CompetitorRanking;
+import com.softwaremagico.kt.persistence.entities.Club;
 import com.softwaremagico.kt.persistence.entities.Group;
+import com.softwaremagico.kt.persistence.entities.Participant;
 import com.softwaremagico.kt.persistence.entities.Role;
-import com.softwaremagico.kt.persistence.entities.Tournament;
+import com.softwaremagico.kt.persistence.entities.Team;
 import com.softwaremagico.kt.persistence.values.RoleType;
 import com.softwaremagico.kt.persistence.values.ScoreType;
 import com.softwaremagico.kt.persistence.values.TournamentType;
@@ -41,81 +66,94 @@ import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Controller;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 @Controller
 public class RankingController {
+    private static final int CACHE_EXPIRATION_TIME = 10 * 60 * 1000;
 
     private final GroupProvider groupProvider;
 
     private final GroupConverter groupConverter;
 
-    private final FightProvider fightProvider;
-
     private final TournamentConverter tournamentConverter;
 
     private final FightConverter fightConverter;
 
-    private final TeamProvider teamProvider;
-
     private final TeamConverter teamConverter;
-
-    private final TournamentProvider tournamentProvider;
 
     private final DuelConverter duelConverter;
 
-    private final DuelProvider duelProvider;
+    private final ParticipantReducedConverter participantReducedConverter;
 
     private final ParticipantConverter participantConverter;
 
+    private final RankingProvider rankingProvider;
+
+    private final ScoreOfCompetitorConverter scoreOfCompetitorConverter;
+
+    private final ScoreOfTeamConverter scoreOfTeamConverter;
+
+    private final ClubProvider clubProvider;
+
     private final ParticipantProvider participantProvider;
+
+    private final ClubConverter clubConverter;
 
     private final RoleProvider roleProvider;
 
-    public RankingController(GroupProvider groupProvider, GroupConverter groupConverter, FightProvider fightProvider,
+    public RankingController(GroupProvider groupProvider, GroupConverter groupConverter,
                              TournamentConverter tournamentConverter, FightConverter fightConverter,
-                             TeamProvider teamProvider, TeamConverter teamConverter, TournamentProvider tournamentProvider,
-                             DuelConverter duelConverter, DuelProvider duelProvider, ParticipantConverter participantConverter,
-                             ParticipantProvider participantProvider, RoleProvider roleProvider) {
+                             TeamConverter teamConverter, DuelConverter duelConverter,
+                             ParticipantReducedConverter participantReducedConverter,
+                             ParticipantConverter participantConverter, RankingProvider rankingProvider,
+                             ScoreOfCompetitorConverter scoreOfCompetitorConverter,
+                             ScoreOfTeamConverter scoreOfTeamConverter,
+                             ClubProvider clubProvider, ParticipantProvider participantProvider, ClubConverter clubConverter,
+                             RoleProvider roleProvider) {
         this.groupProvider = groupProvider;
         this.groupConverter = groupConverter;
-        this.fightProvider = fightProvider;
         this.tournamentConverter = tournamentConverter;
         this.fightConverter = fightConverter;
-        this.teamProvider = teamProvider;
         this.teamConverter = teamConverter;
-        this.tournamentProvider = tournamentProvider;
         this.duelConverter = duelConverter;
-        this.duelProvider = duelProvider;
+        this.participantReducedConverter = participantReducedConverter;
         this.participantConverter = participantConverter;
+        this.rankingProvider = rankingProvider;
+        this.scoreOfCompetitorConverter = scoreOfCompetitorConverter;
+        this.scoreOfTeamConverter = scoreOfTeamConverter;
+        this.clubProvider = clubProvider;
         this.participantProvider = participantProvider;
+        this.clubConverter = clubConverter;
         this.roleProvider = roleProvider;
+    }
+
+    private static Set<ParticipantDTO> getParticipants(List<TeamDTO> teams) {
+        final Set<ParticipantDTO> allCompetitors = new HashSet<>();
+        for (final TeamDTO team : teams) {
+            allCompetitors.addAll(team.getMembers());
+        }
+        return allCompetitors;
     }
 
     private boolean checkLevel(TournamentDTO tournament) {
         return tournament == null || tournament.getType() != TournamentType.KING_OF_THE_MOUNTAIN;
     }
 
-    public List<TeamDTO> getTeamsRanking(Integer groupId) {
-        final Group group = groupProvider.getGroup(groupId);
-        if (group == null) {
-            throw new GroupNotFoundException(this.getClass(), "Group with id" + groupId + " not found!");
-        }
-        return getTeamsRanking(groupConverter.convert(new GroupConverterRequest(group)));
-    }
-
     public List<TeamDTO> getTeamsRanking(GroupDTO groupDTO) {
-        final List<ScoreOfTeam> scores = getTeamsScoreRanking(groupDTO);
-        final List<TeamDTO> teamRanking = new ArrayList<>();
-        for (final ScoreOfTeam score : scores) {
-            teamRanking.add(score.getTeam());
-        }
-        return teamRanking;
+        return teamConverter.convertAll(rankingProvider.getTeamsRanking(groupConverter.reverse(groupDTO))
+                .stream().map(TeamConverterRequest::new).toList());
     }
 
-    public List<ScoreOfTeam> getTeamsScoreRankingFromGroup(Integer groupId) {
+    public List<ScoreOfTeamDTO> getTeamsScoreRankingFromGroup(Integer groupId) {
         final Group group = groupProvider.getGroup(groupId);
         if (group == null) {
             throw new GroupNotFoundException(this.getClass(), "Group with id" + groupId + " not found!");
@@ -123,13 +161,12 @@ public class RankingController {
         return getTeamsScoreRanking(groupConverter.convert(new GroupConverterRequest(group)));
     }
 
-    public List<ScoreOfTeam> getTeamsScoreRankingFromTournament(Integer tournamentId) {
-        final Tournament tournament = tournamentProvider.get(tournamentId).orElseThrow(() ->
-                new TournamentNotFoundException(this.getClass(), "Tournament with id" + tournamentId + " not found!"));
-        return getTeamsScoreRanking(tournamentConverter.convert(new TournamentConverterRequest(tournament)));
+    public List<ScoreOfTeamDTO> getTeamsScoreRankingFromTournament(Integer tournamentId) {
+        return scoreOfTeamConverter.convertAll(rankingProvider.getTeamsScoreRankingFromTournament(tournamentId)
+                .stream().map(ScoreOfTeamConverterRequest::new).toList());
     }
 
-    public List<ScoreOfTeam> getTeamsScoreRanking(GroupDTO groupDTO) {
+    public List<ScoreOfTeamDTO> getTeamsScoreRanking(GroupDTO groupDTO) {
         if (groupDTO == null) {
             return new ArrayList<>();
         }
@@ -137,39 +174,21 @@ public class RankingController {
                 groupDTO.getTeams(), groupDTO.getFights(), groupDTO.getUnties(), checkLevel(groupDTO.getTournament()));
     }
 
-    public List<ScoreOfTeam> getTeamsScoreRanking(ScoreType type, List<TeamDTO> teams, List<FightDTO> fights, List<DuelDTO> unties,
-                                                  boolean checkLevel) {
-        final List<ScoreOfTeam> scores = new ArrayList<>();
-        for (final TeamDTO team : teams) {
-            scores.add(new ScoreOfTeam(team, fights, unties));
-        }
-        sortTeamsScores(type, scores, checkLevel);
-        if (scores.isEmpty()) {
-            return scores;
-        }
-        //check draw values.
-        int sortingIndex = 0;
-        scores.get(0).setSortingIndex(sortingIndex);
-        for (int i = 1; i < scores.size(); i++) {
-            if (getTeamsSorter(type, checkLevel).compare(scores.get(i - 1), scores.get(i)) != 0) {
-                sortingIndex++;
-            }
-            scores.get(i).setSortingIndex(sortingIndex);
-        }
-        return scores;
+    public List<ScoreOfTeamDTO> getTeamsScoreRanking(ScoreType type, List<TeamDTO> teams, List<FightDTO> fights, List<DuelDTO> unties,
+                                                     boolean checkLevel) {
+        return scoreOfTeamConverter.convertAll(rankingProvider.getTeamsScoreRanking(
+                type,
+                teamConverter.reverseAll(teams),
+                fightConverter.reverseAll(fights),
+                duelConverter.reverseAll(unties),
+                //Checks ranking for same level or globally.
+                checkLevel
+        ).stream().map(ScoreOfTeamConverterRequest::new).toList());
     }
 
-    public List<ScoreOfTeam> getTeamsScoreRanking(TournamentDTO tournamentDTO) {
-        final Tournament tournament = tournamentConverter.reverse(tournamentDTO);
-        return getTeamsScoreRanking(tournamentDTO.getTournamentScore().getScoreType(),
-                teamConverter.convertAll(teamProvider.getAll(tournament).stream()
-                        .map(TeamConverterRequest::new).collect(Collectors.toList())),
-                fightConverter.convertAll(fightProvider.getFights(tournament).stream()
-                        .map(FightConverterRequest::new).collect(Collectors.toList())),
-                duelConverter.convertAll(groupProvider.getGroups(tournament).stream()
-                        .flatMap(group -> group.getUnties().stream())
-                        .collect(Collectors.toList()).stream().map(DuelConverterRequest::new).collect(Collectors.toList())),
-                checkLevel(tournamentDTO));
+    public List<ScoreOfTeamDTO> getTeamsScoreRanking(TournamentDTO tournamentDTO) {
+        return scoreOfTeamConverter.convertAll(rankingProvider.getTeamsScoreRanking(tournamentConverter.reverse(tournamentDTO))
+                .stream().map(ScoreOfTeamConverterRequest::new).toList());
     }
 
     /**
@@ -178,23 +197,11 @@ public class RankingController {
      * @return classification of the teams
      */
     public Map<Integer, List<TeamDTO>> getTeamsByPosition(GroupDTO groupDTO) {
-        final HashMap<Integer, List<TeamDTO>> teamsByPosition = new HashMap<>();
-        final List<ScoreOfTeam> scores = getTeamsScoreRanking(groupDTO);
-
-        Integer position = 0;
-        for (int i = 0; i < scores.size(); i++) {
-            teamsByPosition.computeIfAbsent(position, k -> new ArrayList<>());
-            // Put team in position.
-            teamsByPosition.get(position).add(scores.get(i).getTeam());
-            // Different score with next team.
-            if ((i < scores.size() - 1) && getTeamsSorter(groupDTO.getTournament().getTournamentScore().getScoreType(),
-                    checkLevel(groupDTO.getTournament()))
-                    .compare(scores.get(i), scores.get(i + 1)) != 0) {
-                position++;
-            }
-        }
-
-        return teamsByPosition;
+        final Map<Integer, List<Team>> teamsByPosition = rankingProvider.getTeamsByPosition(groupConverter.reverse(groupDTO));
+        final Map<Integer, List<TeamDTO>> teamsByPositionDTO = new HashMap<>();
+        teamsByPosition.keySet().forEach(key -> teamsByPositionDTO.put(key, teamConverter.convertAll(teamsByPosition.get(key)
+                .stream().map(TeamConverterRequest::new).toList())));
+        return teamsByPositionDTO;
     }
 
     public List<TeamDTO> getFirstTeamsWithDrawScore(GroupDTO groupDTO, Integer maxWinners) {
@@ -216,30 +223,7 @@ public class RankingController {
         return null;
     }
 
-    public ScoreOfTeam getScoreOfTeam(GroupDTO groupDTO, Integer order) {
-        final List<ScoreOfTeam> teamsOrder = getTeamsScoreRanking(groupDTO);
-        if (order >= 0 && order < teamsOrder.size()) {
-            return teamsOrder.get(order);
-        }
-        return null;
-    }
-
-    public List<ParticipantDTO> getParticipants(GroupDTO groupDTO) {
-        final Set<ParticipantDTO> competitors = getParticipants(groupDTO.getTeams());
-        final List<ScoreOfCompetitor> scores = new ArrayList<>();
-        for (final ParticipantDTO competitor : competitors) {
-            scores.add(new ScoreOfCompetitor(competitor, groupDTO.getFights(), groupDTO.getUnties(),
-                    countNotOver(groupDTO.getTournament())));
-        }
-        sortCompetitorsScores(groupDTO.getTournament().getTournamentScore().getScoreType(), scores);
-        final List<ParticipantDTO> competitorsRanking = new ArrayList<>();
-        for (final ScoreOfCompetitor score : scores) {
-            competitorsRanking.add(score.getCompetitor());
-        }
-        return competitorsRanking;
-    }
-
-    public List<ScoreOfCompetitor> getCompetitorsScoreRankingFromGroup(Integer groupId) {
+    public List<ScoreOfCompetitorDTO> getCompetitorsScoreRankingFromGroup(Integer groupId) {
         final Group group = groupProvider.getGroup(groupId);
         if (group == null) {
             throw new GroupNotFoundException(this.getClass(), "Group with id" + groupId + " not found!");
@@ -247,194 +231,89 @@ public class RankingController {
         return getCompetitorsScoreRanking(groupConverter.convert(new GroupConverterRequest(group)));
     }
 
-    public List<ScoreOfCompetitor> getCompetitorsScoreRanking(GroupDTO groupDTO) {
+    public List<ScoreOfCompetitorDTO> getCompetitorsScoreRanking(GroupDTO groupDTO) {
         return getCompetitorsScoreRanking(getParticipants(groupDTO.getTeams()), groupDTO.getFights(), groupDTO.getUnties(), groupDTO.getTournament());
     }
 
-    public List<ScoreOfCompetitor> getCompetitorsScoreRankingFromTournament(Integer tournamentId) {
-        final Tournament tournament = tournamentProvider.get(tournamentId).orElseThrow(() ->
-                new TournamentNotFoundException(this.getClass(), "Tournament with id" + tournamentId + " not found!"));
-        return getCompetitorsScoreRanking(tournamentConverter.convert(new TournamentConverterRequest(tournament)));
+    public List<ScoreOfCompetitorDTO> getCompetitorsScoreRankingFromTournament(Integer tournamentId) {
+        return scoreOfCompetitorConverter.convertAll(rankingProvider.getCompetitorsScoreRankingFromTournament(tournamentId)
+                .stream().map(ScoreOfCompetitorConverterRequest::new).toList());
     }
 
-    public List<ScoreOfCompetitor> getCompetitorsScoreRanking(TournamentDTO tournamentDTO) {
-        final List<GroupDTO> groups = groupConverter.convertAll(groupProvider.
-                getGroups(tournamentConverter.reverse(tournamentDTO)).stream().map(GroupConverterRequest::new).collect(Collectors.toList()));
-
-        return getCompetitorsScoreRanking(getParticipants(groups.stream()
-                        .flatMap(group -> group.getTeams().stream())
-                        .collect(Collectors.toList())),
-                groups.stream()
-                        .flatMap(group -> group.getFights().stream())
-                        .collect(Collectors.toList()),
-                groups.stream()
-                        .flatMap(group -> group.getUnties().stream())
-                        .collect(Collectors.toList()),
-                tournamentDTO);
+    public List<ScoreOfCompetitorDTO> getCompetitorsScoreRanking(TournamentDTO tournamentDTO) {
+        return scoreOfCompetitorConverter.convertAll(rankingProvider.getCompetitorsScoreRanking(tournamentConverter.reverse(tournamentDTO))
+                .stream().map(ScoreOfCompetitorConverterRequest::new).toList());
     }
 
-    public List<ScoreOfCompetitor> getCompetitorsScoreRanking(Set<ParticipantDTO> competitors, List<FightDTO> fights, List<DuelDTO> unties,
-                                                              TournamentDTO tournamentDTO) {
-        final List<ScoreOfCompetitor> scores = new ArrayList<>();
-        for (final ParticipantDTO competitor : competitors) {
-            scores.add(new ScoreOfCompetitor(competitor, fights, unties, countNotOver(tournamentDTO)));
-        }
-        sortCompetitorsScores(tournamentDTO.getTournamentScore().getScoreType(), scores);
-        return scores;
+    public List<ScoreOfCompetitorDTO> getCompetitorsScoreRanking(Set<ParticipantDTO> competitors, List<FightDTO> fights, List<DuelDTO> unties,
+                                                                 TournamentDTO tournamentDTO) {
+        return scoreOfCompetitorConverter.convertAll(rankingProvider.getCompetitorsScoreRanking(
+                participantConverter.reverseAll(competitors),
+                fightConverter.reverseAll(fights),
+                duelConverter.reverseAll(unties),
+                tournamentConverter.reverse(tournamentDTO)
+        ).stream().map(ScoreOfCompetitorConverterRequest::new).toList());
     }
 
-    public List<ScoreOfCompetitor> getCompetitorsGlobalScoreRanking(Collection<ParticipantDTO> competitors) {
+    public List<ScoreOfCompetitorDTO> getCompetitorsGlobalScoreRankingByClub(Integer clubId) {
+        final Club club = clubProvider.get(clubId).orElseThrow(() ->
+                new ClubNotFoundException(this.getClass(), "No club found with id '" + clubId + "'"));
+        final List<Participant> participants = participantProvider.get(club);
+        final List<Role> competitorRoles = roleProvider.get(participants, RoleType.COMPETITOR);
+        participants.retainAll(competitorRoles.stream().map(Role::getParticipant).collect(Collectors.toSet()));
+        return getCompetitorsGlobalScoreRanking(participantConverter.convertAll(participants.stream()
+                .map(participant -> new ParticipantConverterRequest(participant, clubConverter.convert(new ClubConverterRequest(club)))).toList()));
+    }
+
+    public List<ScoreOfCompetitorDTO> getCompetitorsGlobalScoreRanking(Collection<ParticipantDTO> competitors) {
         return getCompetitorsGlobalScoreRanking(competitors, ScoreType.DEFAULT);
     }
 
-    public List<ScoreOfCompetitor> getCompetitorsGlobalScoreRanking(Collection<ParticipantDTO> competitors, ScoreType scoreType) {
-        final List<ScoreOfCompetitor> scores = new ArrayList<>();
-        final List<FightDTO> fights = fightConverter.convertAll(fightProvider.get(participantConverter.reverseAll(competitors)).stream()
-                .map(FightConverterRequest::new).collect(Collectors.toSet()));
-        final List<DuelDTO> unties = duelConverter.convertAll(duelProvider.getUnties(participantConverter.reverseAll(competitors)).stream()
-                .map(DuelConverterRequest::new).collect(Collectors.toSet()));
-        for (final ParticipantDTO competitor : competitors) {
-            scores.add(new ScoreOfCompetitor(competitor, fights, unties, false));
-        }
-        sortCompetitorsScores(scoreType, scores);
-        return scores;
+
+    public List<ScoreOfCompetitorDTO> getCompetitorsGlobalScoreRanking(Collection<ParticipantDTO> competitors, ScoreType scoreType) {
+        final Map<Integer, ClubDTO> clubsById = competitors.stream()
+                .map(ParticipantDTO::getClub).collect(Collectors.toMap(ClubDTO::getId, Function.identity(), (r1, r2) -> r1));
+        return scoreOfCompetitorConverter.convertAll(rankingProvider.getCompetitorsGlobalScoreRanking(
+                        participantConverter.reverseAll(competitors),
+                        scoreType
+                )
+                .stream().map(scoreOfCompetitor -> new ScoreOfCompetitorConverterRequest(scoreOfCompetitor,
+                        clubsById.get(scoreOfCompetitor.getCompetitor().getClub().getId()))).toList());
     }
 
-    public List<ScoreOfCompetitor> getCompetitorGlobalRanking(ScoreType scoreType) {
-        final List<ScoreOfCompetitor> scores = new ArrayList<>();
-        final List<FightDTO> fights = fightConverter.convertAll(fightProvider.getAll().stream()
-                .map(FightConverterRequest::new).collect(Collectors.toSet()));
-        final List<DuelDTO> unties = duelConverter.convertAll(duelProvider.getUnties().stream()
-                .map(DuelConverterRequest::new).collect(Collectors.toSet()));
-        final List<ParticipantDTO> competitors = participantConverter.convertAll(roleProvider.getAll().stream()
-                .filter(role -> role.getRoleType() == RoleType.COMPETITOR).map(Role::getParticipant)
-                .map(ParticipantConverterRequest::new).collect(Collectors.toSet()));
-        for (final ParticipantDTO competitor : competitors) {
-            scores.add(new ScoreOfCompetitor(competitor, fights, unties, false));
-        }
-        sortCompetitorsScores(scoreType, scores);
-        return scores;
+    public List<ScoreOfCompetitorDTO> getCompetitorGlobalRanking(ScoreType scoreType) {
+        return scoreOfCompetitorConverter.convertAll(rankingProvider.getCompetitorGlobalRanking(scoreType).stream()
+                .map(ScoreOfCompetitorConverterRequest::new).collect(Collectors.toSet()));
     }
 
     public CompetitorRanking getCompetitorRanking(ParticipantDTO participantDTO) {
-        final List<ScoreOfCompetitor> ranking = getCompetitorGlobalRanking(ScoreType.DEFAULT);
-        return new CompetitorRanking(IntStream.range(0, ranking.size())
-                .filter(i -> Objects.equals(participantDTO, ranking.get(i).getCompetitor()))
-                .findFirst().orElse(ranking.size() - 1), ranking.size());
+        if (participantDTO == null) {
+            return null;
+        }
+        return rankingProvider.getCompetitorRanking(participantConverter.reverse(participantDTO));
     }
 
-    public ScoreOfCompetitor getScoreRanking(GroupDTO groupDTO, ParticipantDTO competitor) {
-        final List<ScoreOfCompetitor> scoreRanking = getCompetitorsScoreRanking(groupDTO);
-        for (final ScoreOfCompetitor score : scoreRanking) {
-            if (score.getCompetitor().equals(competitor)) {
-                return score;
-            }
-        }
-        return null;
+    public ScoreOfCompetitorDTO getScoreRanking(GroupDTO groupDTO, ParticipantDTO competitor) {
+        return scoreOfCompetitorConverter.convert(new ScoreOfCompetitorConverterRequest(rankingProvider
+                .getScoreRanking(groupConverter.reverse(groupDTO), participantConverter.reverse(competitor))));
     }
 
     public ParticipantDTO getCompetitor(GroupDTO groupDTO, Integer order) {
-        final List<ParticipantDTO> competitorOrder = getParticipants(groupDTO);
-        if (order >= 0 && order < competitorOrder.size()) {
-            return competitorOrder.get(order);
-        }
-        return null;
+        return participantReducedConverter.convert(new ParticipantConverterRequest(
+                rankingProvider.getCompetitor(groupConverter.reverse(groupDTO), order)));
     }
 
-    public ScoreOfCompetitor getScoreOfCompetitor(GroupDTO groupDTO, Integer order) {
-        final List<ScoreOfCompetitor> teamsOrder = getCompetitorsScoreRanking(groupDTO);
-        if (order >= 0 && order < teamsOrder.size()) {
-            return teamsOrder.get(order);
-        }
-        return null;
+    public ScoreOfCompetitorDTO getScoreOfCompetitor(GroupDTO groupDTO, Integer order) {
+        return scoreOfCompetitorConverter.convert(new ScoreOfCompetitorConverterRequest(rankingProvider
+                .getScoreOfCompetitor(groupConverter.reverse(groupDTO), order)));
     }
 
-    private static Set<ParticipantDTO> getParticipants(List<TeamDTO> teams) {
-        final Set<ParticipantDTO> allCompetitors = new HashSet<>();
-        for (final TeamDTO team : teams) {
-            allCompetitors.addAll(team.getMembers());
-        }
-        return allCompetitors;
+    public Integer getOrder(GroupDTO groupDTO, TeamDTO teamDTO) {
+        return rankingProvider.getOrder(groupConverter.reverse(groupDTO), teamConverter.reverse(teamDTO));
     }
 
-    public Integer getOrder(GroupDTO group, TeamDTO team) {
-        final List<TeamDTO> ranking = getTeamsRanking(group);
-
-        for (int i = 0; i < ranking.size(); i++) {
-            if (ranking.get(i).equals(team)) {
-                return i;
-            }
-        }
-        return null;
-    }
-
-    public Integer getOrderFromRanking(List<ScoreOfTeam> ranking, TeamDTO team) {
-        for (int i = 0; i < ranking.size(); i++) {
-            if (ranking.get(i).getTeam().equals(team)) {
-                return i;
-            }
-        }
-        return null;
-    }
-
-    private static void sortTeamsScores(ScoreType type, List<ScoreOfTeam> scores, boolean checkLevel) {
-        if (scores == null) {
-            return;
-        }
-        scores.sort(getTeamsSorter(type, checkLevel));
-    }
-
-    private static Comparator<ScoreOfTeam> getTeamsSorter(ScoreType type, boolean checkLevel) {
-        switch (type) {
-            case CUSTOM:
-                return new ScoreOfTeamCustom(checkLevel);
-            case EUROPEAN:
-                return new ScoreOfTeamEuropean(checkLevel);
-            case INTERNATIONAL:
-                return new ScoreOfTeamInternational(checkLevel);
-            case WIN_OVER_DRAWS:
-                return new ScoreOfTeamWinOverDraws(checkLevel);
-            case CLASSIC:
-            default:
-                return new ScoreOfTeamClassic(checkLevel);
-        }
-    }
-
-    private static void sortCompetitorsScores(ScoreType type, List<ScoreOfCompetitor> scores) {
-        if (scores == null) {
-            return;
-        }
-        scores.sort(getCompetitorsSorter(type));
-    }
-
-    private static Comparator<ScoreOfCompetitor> getCompetitorsSorter(ScoreType type) {
-        switch (type) {
-            case CUSTOM:
-                return new ScoreOfCompetitorCustom();
-            case EUROPEAN:
-                return new ScoreOfCompetitorEuropean();
-            case INTERNATIONAL:
-                return new ScoreOfCompetitorInternational();
-            case WIN_OVER_DRAWS:
-                return new ScoreOfCompetitorWinOverDraws();
-            case CLASSIC:
-            default:
-                return new ScoreOfCompetitorClassic();
-        }
-    }
-
-    /**
-     * On some leagues, we need to count the fights not finished for the score.
-     *
-     * @param tournamentDTO
-     * @return if it must be counted.
-     */
-    private boolean countNotOver(TournamentDTO tournamentDTO) {
-        return tournamentDTO.getType() == TournamentType.KING_OF_THE_MOUNTAIN;
-    }
-
-    @CacheEvict(allEntries = true, value = {"ranking"})
-    @Scheduled(fixedDelay = 60 * 10 * 1000)
+    @CacheEvict(allEntries = true, value = {"ranking", "competitors-ranking"})
+    @Scheduled(fixedDelay = CACHE_EXPIRATION_TIME)
     public void reportCacheEvict() {
         //Only for handling Spring cache.
     }
